--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form action="/checkout" method="GET">
   <input type="text" name="item">
-  <input type="submit">
+  <input type="Submit">
 </form>
