--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action="/checkout" method="GET">
+<form action="/checkout" method="POST">
   <input type="text" name="item">
-  <input type="Submit">
+  <input type="submit" name="submit">
 </form>
